Get rid of Java 25 warnings. Thanks, Albert!
I'm not sure if this is the best approach in the long-term, but we need Java 8 compatibility as well as ideally compatibility with the most recent JDK... This does silence the warnings, at least.